<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.cinema</groupId>
  <artifactId>tpnote</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <dependencies>
  	<dependency>
    	<groupId>org.webjars</groupId>
    	<artifactId>font-awesome</artifactId>
    	<version>5.13.0</version>
	</dependency>
	<dependency>
    	<groupId>com.jfoenix</groupId>
    	<artifactId>jfoenix</artifactId>
    	<version>9.0.8</version>
	</dependency>
  	<dependency>
  		<groupId>mysql</groupId>
    	<artifactId>mysql-connector-java</artifactId>
    	<version>8.0.19</version>
  	</dependency>
  	<dependency>
    	<groupId>org.openjfx</groupId>
    	<artifactId>javafx-controls</artifactId>
    	<version>12.0.2</version>
	</dependency>
	<dependency>
    	<groupId>org.openjfx</groupId>
    	<artifactId>javafx-fxml</artifactId>
    	<version>11.0.1</version>
	</dependency>
    <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>5.4.2</version>
        <scope>test</scope>
    </dependency>
    <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>5.4.2</version>
        <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
  	<plugins>
  		<plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.0</version>
            <configuration>
          		<release>11</release>
        	</configuration>
        </plugin>
  		<plugin>
    		<groupId>org.openjfx</groupId>
    		<artifactId>javafx-maven-plugin</artifactId>
    		<version>0.0.4</version>
    		<configuration>
        		<mainClass>com.cinema.Main</mainClass>
    		</configuration>
		</plugin>
		<plugin>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-maven-plugin</artifactId>
		    <version>0.0.1</version>
		    <configuration>
		        <options>
			        <option>--add-opens</option>
			        <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
			        <option>--add-opens</option>
			        <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
			        <option>--add-exports</option>
			        <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
			        <option>--add-exports</option>
			        <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
			        <option>--add-exports</option>
			        <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
			        <option>--add-exports</option>
			        <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
			        <option>--add-exports</option>
			        <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
		        </options>
		    </configuration>
		</plugin>	
		<plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.22.1</version>
        </plugin>
  	</plugins>
  </build>
</project>